# matrixemotion

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mmmm.py
emx-mixing-matrix-starter/: LICENSE  README.md  UPLOAD_READY.txt  pyproject.toml
emx-mixing-matrix-starter/emx/: __init__.py  engine.py  io.py
emx-mixing-matrix-starter/examples/: base.yaml  policy.yaml  run_step.py
emx-mixing-matrix-starter/schema/: emx.schema.json
emx-mixing-matrix-starter/tests/: test_engine.py
examples/: mmmm.py  plot_matrix.py  run_step.py
src/emx/: core.py
tests/: test_core.py
